<resources>
    <string name="app_name">Base</string>
    <string name="app_version">0.2.85 (betta)</string>
    <string name="db_version">1.0</string>

    <string name="app_description">Mobile CRM for Android</string>
    <string name="app_author">Fedotovskih Konstantin</string>

    <string name="app_title">B A S E</string>
    <string name="app_subtitle">mobile</string>

    <string name="action_settings">Settings</string>

    <string name="nav_item_customers">Организации</string>
    <string name="nav_item_contacts">Контакты</string>
    <string name="nav_item_contracts">Контракты</string>
    <string name="nav_item_settings">Настройки</string>
    <string name="nav_item_update">Обновления</string>
    <string name="nav_item_nfo">Информация</string>

    <string name="tab_item_customers">Организации</string>
    <string name="tab_item_contacts">Контакты</string>
    <string name="tab_item_contracts">Контракты</string>
    <string name="customer_details_tab_item_customers">Организация</string>

    <string name="navigation_close">Закрыть</string>
    <string name="navigation_open">Открыть</string>
    <string name="txtTitleShort">txtTitleShort</string>
    <string name="txtAddress">Адрес</string>
    <string name="tvCustomerTitleShort">Наименование</string>
    <string name="tvCustomerTitleFull">Полное наименование</string>
    <string name="tvCustomerCity">Город</string>
    <string name="tvCustomerAddress">Адрес</string>
    <string name="tvRegion">Регион</string>
    <string name="tvShowInMap">Показать на карте</string>
    <string name="ctx_menu_item_copy">Копировать</string>
    <string name="txtName">Имя</string>
    <string name="txtCompany">Оргазация</string>
    <string name="txtStatus">Должность</string>
    <string name="txtEdit">Изменить</string>
    <string name="txtMap">Карта</string>
    <string name="txtDelete">Удалить</string>
    <string name="txtApply">Применить</string>
    <string name="txtCancel">Отменить</string>
    <string name="txtCall" />
    <string name="txtSMS">txtSMS</string>
    <string name="txtAddToContacts">Добавить в контакты</string>
    <string name="txtContactName">Имя</string>
    <string name="txtContactStatus">Должность</string>
    <string name="txtPhone">Телефон</string>
    <string name="txtMobile">Мобильный телефон</string>
    <string name="txtEmail">Email</string>
    <string name="txtPhoneIntentFail">Не удается передать номер в приложение</string>
    <string name="txtEmailIntentFail">Ошибка передачи email адреса в приложение</string>
    <string name="txtSearch">Поиск</string>
    <string name="txtNoData">Нет данных</string>
    <string name="txtUnderConstruction">Этот функционал будет добавлен в следующей версии</string>
    <string name="txtUpdates">Обновления</string>
    <string name="txtDbVersion">Версия БД</string>
    <string name="txtUpdatesNotFound">Обновлений необноружено</string>
    <string name="txtAbout">О программе</string>
    <string name="txtCompanyName">Организация</string>
    <string name="txtNavBarHeaderAppTitle">B A S E</string>
    <string name="txtUserName">UserName</string>
    <string name="txtLogin">Login</string>
    <string name="txtUserNameHint">Имя пользователя</string>
    <string name="txtPasswordHint">Пароль</string>
    <string name="txtPassword">Пароль</string>
    <string name="txtStayInSystem">Оставаться в системе</string>
    <string name="txtUserAccount">Пользователь</string>
    <string name="txtLoginFailed">Неверное имя пользователя или пароль</string>
    <string name="txtLogout">Logout</string>
    <string name="txtCheckEvolutionFailed">База данных устарела - необходимо обновние</string>
    <string name="txtResend">Переслать</string>


</resources>
