<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    tools:context=".activity.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="36dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="18dp"
            android:text="@string/app_title"
            android:textColor="@color/colorNavHeaderText"
            android:textSize="56sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtUserAccount"
            android:textAppearance="@android:style/TextAppearance.Small"
            android:textColor="@color/colorLoginActivityText"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtUserNameHint"
            android:textSize="18sp"
            android:inputType="text"
            android:theme="@style/loginColor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="18dp"
            android:text="@string/txtPassword"
            android:textColor="@color/colorLoginActivityText"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtPasswordHint"
            android:textSize="18sp"
            android:theme="@style/loginColor"
            android:inputType="textPassword" />

        <CheckBox
            android:id="@+id/chkStayInSystem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/txtStayInSystem"
            android:textColor="@color/colorLoginActivityText"
            android:theme="@style/loginColor" />

        <LinearLayout
            android:id="@+id/ltLoginFailed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="4dp"
                android:src="@drawable/ic_login_cancel"
                android:contentDescription="@string/app_title" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/txtLoginFailed"
                android:textColor="@color/colorLoginFailedText" />

        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_margin="22dp"
            android:background="@drawable/button_login"
            android:onClick="onBtnLoginClick"
            android:text="@string/txtLogin"
            android:textColor="@color/colorLoginActivityText" />

    </LinearLayout>

    </ScrollView>
</LinearLayout>
